# zap_server

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-BaseServer  Pipfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pythonapp.yml
apps/: client_app.py  exceptions.py  names.py  zap_server_app.py
apps/tests/: test_server_app.py
contrib/: env-sample
core/: logs.py  settings.py
core/commands/: bases.py
core/exceptions/: bases.py
core/factories/: whatsapp.py
core/singletons/: singleton_meta.py
core/utils/: classes.py  exception_info_sender.py  numbers_gen.py  strategies.py
core/utils/browsers/: classes.py  local_storage.py
core/utils/qr_code/: classes.py  pocs.py
data/: elements_data.pkl
notebooks/: getting_wa_elements.ipynb
notebooks/res/: 2024_03_16_03_30_23_760697_wa.html
server/: managers.py
server/adapters/: adapts.py  bases.py  categories.py  mocks.py  utils.py
server/adapters/the_first/: classes.py  exceptions.py
server/adapters/the_first/elements/: classes.py  data.py  drivers.py  exceptions.py
server/adapters/the_first/tests/: test_connections.py
server/commands/: classes.py  managers.py  splitters.py
server/commands/groups/: classes.py  exceptions.py
server/commands/managements/: classes.py  exceptions.py
server/commands/messages/: classes.py  exceptions.py
server/commands/persons/: classes.py
server/commands/properties/: classes.py  exceptions.py
server/exceptions/: classes.py
server/factories/: whatsapp.py
tests/: test_main.py
