[tool.poetry]
name = "zap-server"
version = "0.1.0"
description = ""
authors = ["Marcus Vinicius Braga <mvbraga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
astroid = "^3.1.0"
beautifulsoup4 = "^4.12.3"
pickle-mixin = "^1.0.2"
pillow = "^10.2.0"
platformdirs = "^4.2.0"
pluggy = "^1.4.0"
pytest = "^8.1.1"
python-dotenv = "^1.0.1"
qrcode = "^7.4.2"
selenium = "^4.18.1"
traitlets = "^5.14.2"
webdriver-manager = "^4.0.1"
pyzbar = {extras = ["scripts"], version = "^0.1.9"}

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
pytest = "^8.1.1"
flake8 = "^7.0.0"
codecov = "^2.1.13"
coverage = "^7.4.4"
pytest-cov = "^4.1.0"

